tests/integration/pilot/test_artifacts/pilot-b69b4fcf9fb24a978e2d0f26c/TestTraffic/virtualservice/set_host_header_in_destination/a/to_tproxy/_test_context/VirtualService.868058908.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-20468
spec:
  hosts:
  - tproxy
  http:
  - route:
    - destination:
        host: tproxy
      headers:
        request:
          set:
            Host: my-custom-authority
